Increase line height to fix overlapping

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,6 @@ h1 {
 
 ul li {
     list-style: none;
-    line-height: 10px;
+    line-height: 100px;
 }
 
